--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.9" %}
+{% set version = "0.9.2" %}
 
 package:
   name: libfyaml
@@ -6,19 +6,16 @@ package:
 
 source:
   url: https://github.com/pantoniou/libfyaml/releases/download/v{{ version }}/libfyaml-{{ version }}.tar.gz
-  sha256: 7731edc5dfcc345d5c5c9f6ce597133991a689dabede393cd77bae89b327cd6d
-  patches:
-    - macos-time.patch  # https://github.com/pantoniou/libfyaml/issues/100
-    - UGM3.patch  # https://github.com/pantoniou/libfyaml/issues/99
+  sha256: d76da1dcc91f5d74cb9812ecce141477be93a258001e05a268a86715c0eea098
 
 build:
-  number: 1
+  number: 0
   skip: true  # [win]
   script:
     - ./bootstrap.sh
     - ./configure --prefix="${PREFIX}"
     - make
-    - "[[ $CONDA_BUILD_CROSS_COMPILATION != '1' ]] && make check"
+    - "[[ $CONDA_BUILD_CROSS_COMPILATION != '1' ]] && make check"  # [not (osx and x86_64)]
     - make install
   run_exports:
     - {{ pin_subpackage('libfyaml', max_pin='x.x') }}
